[tool.poetry]
name = "ping-monitor"
version = "0.1.0"
description = "Network connection quality monitor"
authors = ["John Fitzgerald"]
packages = [{ include = "ping_monitor" }]

[tool.poetry.dependencies]
python = "^3.12"
tomli = "^2.0.1"
rich = "^13.7.0"
typer = { extras = ["all"], version = "^0.13.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ping-monitor = "ping_monitor.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "asyncio: mark test as async",
]